--- a/src/styling/topnavbar.css
+++ b/src/styling/topnavbar.css
@@ -2,15 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Permanent+Marker&family=Shrikhand&display=swap');
 
 #navbar-color{
-background-color: rgb(25, 148, 175);
+background-color: rgb(27, 29, 29);
 }
+
+/* rgb(25, 148, 175) */
 
 body{
   background-image: url(./einstein.jpg);
 }
 
 .logo{
-    color: rgb(0, 0, 0) !important;
+    color: rgb(0, 255, 229) !important;
     font-size: 2rem !important;
     font-family: Shrikhand;
   }
@@ -19,7 +21,7 @@ body{
 
 .active{
     font-size: large !important;
-    color: #000000 !important;
+    color: rgb(0, 255, 229) !important;
 }
 
 
