--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -17,11 +17,12 @@ div h1:hover{
 
 #image{
     /* display: inline; */
-    left:auto;
+ 
     margin-top: 3.5rem;
     margin-bottom: 2rem;
     box-shadow:  1px 9px 144px 5px #03b2f7;
     border-radius: 2rem;
+    margin-left: 6rem;
 }
 
 
@@ -29,7 +30,7 @@ div h1:hover{
     display: flex;
     flex-direction: row;
     text-align: center;
-    color: rgb(209, 27, 148);
+    color: rgb(242, 242, 242);
 }
 
 
