--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -4,15 +4,16 @@
 display: flex;
 flex-direction: row;
 justify-content: center ;
- color: rgba(24, 224, 164, 0.981);
+ color: rgba(22, 128, 177, 0.981);
  font-family: Boku;
  margin-top: 2rem;
- border-bottom: 1px solid rgba(98, 104, 160, 0.268);
+ border-bottom: 1px solid rgba(98, 104, 160, 0.099);
  
 } 
 
 div h1:hover{
-    color: rgba(22, 128, 177, 0.981) !important;
+    color: rgba(22, 177, 110, 0.981) !important;
+    cursor: default;
 }
 
 #image{
@@ -31,7 +32,25 @@ div h1:hover{
     flex-direction: row;
     text-align: center;
     color: rgb(255, 255, 255);
+    border-bottom: 1px solid rgba(98, 104, 160, 0.268);
    
 }
+
+.skills-title{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    cursor: default;
+    font-family: boku;
+    color: rgba(22, 128, 177, 0.981);
+    margin-top: 4rem;
+    background-color: rgba(4, 0, 19, 0.66) !important;
+    border-radius: 3rem;
+    height: 24rem;
+    
+ 
+}
+
+
 
 
