--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -1,17 +1,6 @@
-.bg-footer{
- color: rgb(0, 0, 0);
-position: absolute;
-   bottom: 0;
-   width:100%;   /* Height of the footer */
-   background-color:rgba(19, 20, 19, 0.782);
-}
-
-#name-year{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /* padding-left: 4rem; */
-
-    font-weight: 500;
-    color:rgb(255, 255, 255);
+.text-copyright{
+    text-align: left;
+    background-color: rgb(27, 29, 29) !important;
+    color: white;
+    padding-left: 4rem;
 }
