--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -32,9 +32,21 @@ div h1:hover{
     flex-direction: row;
     text-align: center;
     color: rgb(255, 255, 255);
+    font-size: large;
     border-bottom: 1px solid rgba(98, 104, 160, 0.268);
+    animation-name: text;
+    animation-duration: 4s;
+   
    
 }
+
+@keyframes text {
+    0%   {color:rgb(0, 0, 0)}
+    25%  {color:rgb(11, 92, 191)}
+    25%  {font-size:xx-large;}
+  
+    
+  }
 
 .skills-title{
     display: flex;
