--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -1,10 +1,3 @@
-.socialmedia-icons{
-    display:flex;
-    flex-direction: column;
-    text-align: center;
-    color: white;
-
-}
 
 .text-copyright{
     color: white;
@@ -13,4 +6,12 @@
 
 .footer-color{
     background-color: rgb(27, 29, 29);
+}
+
+.sexy {
+    position: relative;
+    display: fixed;
+    width: 20px;
+    color: rgb(0, 128, 119);
+    left: 10rem !important;
 }
