--- a/src/styling/footer.css
+++ b/src/styling/footer.css
@@ -11,7 +11,11 @@
 
 
 .icons{
-    color: rgb(143, 21, 21) !important; 
+    color: rgb(196, 169, 15) !important; 
     margin-right: 1rem;
     
+}
+
+div.card{
+    background-color: rgb(27, 29, 29) !important;
 }
