--- a/src/styling/projects.css
+++ b/src/styling/projects.css
@@ -9,3 +9,19 @@
      
     } 
   
+
+    .frontend-title{
+        display:block;
+        margin-top: 2rem;
+        width: 44%;
+        margin-left: 28%;
+        text-align: center;
+        color: rgb(243, 8, 8);
+        font-family: -apple-system;
+        background-color: rgba(255, 255, 255, 0.096);
+        text-align: center;
+        
+    }
+
+
+    
