working on projects link

--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -75,6 +75,10 @@ h1{
     
 }
 
+.technologies:hover{
+    block-size: 6rem !important;
+}
+
 
 @keyframes tech {
     0%   {background-color:rgb(0, 0, 0)}
