--- a/src/styling/projects.css
+++ b/src/styling/projects.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
+
+
 .projects-title{
     display: flex;
     flex-direction: row;
@@ -10,18 +14,43 @@
     } 
   
 
-    .frontend-title{
+    .frontend-title {
+
         display:block;
-        margin-top: 2rem;
-        width: 44%;
-        margin-left: 28%;
+        margin-top: 3rem !important;
+        width: 200px;
+        margin-left: auto;
+        margin: auto;
         text-align: center;
         color: rgb(243, 8, 8);
-        font-family: -apple-system;
-        background-color: rgba(255, 255, 255, 0.096);
+        font-family: sans-serif;
         text-align: center;
-        
+        box-shadow:  1px 9px 100px 5px #6103f7;
+        background-color: rgba(235, 213, 15, 0.945);
+        border-radius: 30rem;
+    }
+
+    .homegrown-image{
+        margin-top: 3rem; 
+        margin-left: 3rem;
+        height: auto;
+        width: 40%;
+        box-shadow:  1px 9px 100px 5px #03f7a6;
+        border-radius: 30rem !important; 
+        border-color: rgb(117, 8, 242);
     }
 
 
-    
+
+    .frontendone-card{
+       position: absolute;
+       width: 40%;
+       text-align: center;
+       bottom: 500%;
+    }
+
+    .frontendone-title{
+        color:white;
+    }
+
+
