--- a/src/styling/projects.css
+++ b/src/styling/projects.css
@@ -32,25 +32,24 @@
 
     .homegrown-image{
         margin-top: 3rem; 
-        margin-left: 3rem;
-        height: auto;
-        width: 40%;
-        box-shadow:  1px 9px 100px 5px #03f7a6;
-        border-radius: 30rem !important; 
+        box-shadow:  1px 9px 100px 5px #03f7a6a2;
+        border-radius: 3rem !important; 
         border-color: rgb(117, 8, 242);
     }
 
 
+    .homegrown-buttons{
+        padding: 0 4rem 0 !important;
 
-    .frontendone-card{
-       position: absolute;
-       width: 40%;
-       text-align: center;
-       bottom: 500%;
+   text-align: center;
     }
+
+
+
 
     .frontendone-title{
         color:white;
+        text-align: center;
     }
 
 
