--- a/src/styling/projects.css
+++ b/src/styling/projects.css
@@ -55,15 +55,20 @@
         border-color: rgb(117, 8, 242);
         animation: mymove 4s ease-in-out;
         animation-iteration-count: 1;
-     
-
     }
+
+
     .homegrown-buttons{
         display: flex;
         width: 100%;
         justify-content:space-evenly;
        text-align: center;
 
+    }
+
+    .homegrown-buttons:hover{
+        animation: shakebutton 0.5s;
+        animation-iteration-count: 1;
     }
 
 
@@ -83,7 +88,6 @@
         padding-left: 1rem;
         animation: mymove 4s ease-in-out;
         animation-iteration-count: 1;
-       
         
     }
 
@@ -123,8 +127,6 @@
         color:rgb(251, 251, 251);
         text-align: center !important;
         font-weight: 700 !important;
-        background-color: rgba(0, 10, 1, 0.058);
-        border-radius: 30rem;
 
     }
 
@@ -134,8 +136,17 @@
         width: 100%;
         justify-content:space-evenly;
        text-align: center;
-
+       
     }
+
+    .teamprofile-buttons:hover{
+    animation: shakebutton 0.5s;
+    animation-iteration-count: 1;
+    }
+
+
+
+    
     
 
     .backend-title{
@@ -154,6 +165,63 @@
     }
 
 
+.progressive-image{
+    margin-top: 3rem; 
+    box-shadow:  1px 9px 100px 5px #03f7a6a2;
+    border-radius: 3rem !important; 
+    border-color: rgb(12, 242, 8);
+    animation: mymove 4s ease-in-out;
+    animation-iteration-count: 1;
+
+}
+
+.progressive-title{
+    color:white;
+    text-align: center;
+
+}
+
+.progressive-description{
+    color:rgb(251, 251, 251);
+    text-align: center !important;
+    font-weight: 700 !important;
+
+}
+
+.progressive-buttons{
+    display: flex;
+    width: 100%;
+    justify-content:space-evenly;
+   text-align: center;
+   
+}
+
+
+.progressive-buttons:hover{
+    animation: shakebutton 0.5s;
+    animation-iteration-count: 1;
+}
+
+
+
+
+
+
+
+
+    @keyframes shakebutton {
+        0% { transform: translate(1px, 1px) rotate(0deg); }
+        10% { transform: translate(-1px, -2px) rotate(-1deg); }
+        20% { transform: translate(-3px, 0px) rotate(1deg); }
+        30% { transform: translate(3px, 2px) rotate(0deg); }
+        40% { transform: translate(1px, -1px) rotate(1deg); }
+        50% { transform: translate(-1px, 2px) rotate(-1deg); }
+        60% { transform: translate(-3px, 1px) rotate(0deg); }
+        70% { transform: translate(3px, 1px) rotate(-1deg); }
+        80% { transform: translate(-1px, -1px) rotate(1deg); }
+        90% { transform: translate(1px, 2px) rotate(0deg); }
+        100% { transform: translate(1px, -2px) rotate(-1deg); }
+      }
 
 
     @keyframes mymove {
