projects page completed

--- a/src/styling/aboutme.css
+++ b/src/styling/aboutme.css
@@ -109,6 +109,15 @@ h1{
   }
 
 
+  .projectlead-button{
+      display: flex;
+      justify-content: center;
+      margin-bottom: 7rem;
+    text-decoration: none;
+    color: lawngreen !important;
+      
+  }
+
 
 
 
