--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -1,4 +1,4 @@
-.contact-tile{
+.contact-title{
 display: flex;
 flex-direction: row;
 justify-content: center ;
@@ -9,9 +9,6 @@ justify-content: center ;
 
 }
 
-.row{
-    margin-left: 4rem !important;
-}
 
 
 
@@ -24,6 +21,8 @@ justify-content: center ;
     .row{
         margin-left: 1.5rem !important;
     }
+
+  
 
 }
 
