--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -6,7 +6,40 @@ justify-content: center ;
  font-family: boku;
  margin-top: 2rem;
  border-bottom: 1px solid rgba(98, 104, 160, 0.099);
+ 
 
+}
+
+
+
+#contact-me{
+    background-color: rgb(6, 238, 138);
+    width: 20rem;
+    margin-left: auto;
+    margin-right: auto;
+   font-size: 2.5rem !important;
+   margin-top: 3rem;
+ text-align: center;
+    color: rgb(0, 5, 7);
+    font-family:monospace;
+    border-radius: 40rem;
+  
+ 
+  
+}
+
+.contact-info{
+    margin-top: 7rem;
+    color: white;
+    font-weight: 700;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+   text-align: center;
+   box-shadow: 0px 0px 7px -1px #000000;
+   height: 30% !important;
+   
+   
 }
 
 
@@ -14,13 +47,18 @@ justify-content: center ;
 
 
 
-
-
-
 @media (max-width:600px){
+   
+
     .row{
         margin-left: 1.5rem !important;
     }
+
+  .contact-info{
+      margin-top: 3.5rem;
+      width: 80% ;
+     
+  }
 
   
 
