--- a/src/styling/topnavbar.css
+++ b/src/styling/topnavbar.css
@@ -15,9 +15,9 @@ background-color: rgb(27, 29, 29);
 
 body{
   /* background: linear-gradient(0.25turn, #e10d0dc9, #010c1a, #f69d3c); */
-  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+  background: linear-gradient(217deg, rgb(255, 119, 0), rgba(255,0,0,0) 70.71%),
             linear-gradient(127deg, rgba(0, 140, 255, 0.9), rgba(188, 3, 249, 0.925) 70.71%),
-            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+            linear-gradient(336deg, rgb(0, 166, 255), rgba(0,0,255,0) 70.71%);
 }
 
 /* linear-gradient(0.25turn, #e10d0dc9, #010c1a, #f69d3c); */
