--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -29,17 +29,23 @@ justify-content: center ;
 }
 
 .contact-info{
-    margin-top: 7rem;
-    color: white;
+    margin-top: 5.7rem;
+    color: rgb(250, 249, 249);
     font-weight: 700;
-    width: 50%;
+    font-size: 1.2rem;
+    width: 30%;
     margin-right: auto;
     margin-left: auto;
-   text-align: center;
+   text-align:center;
    box-shadow: 0px 0px 7px -1px #000000;
-   height: 30% !important;
+   transition: color 2s;
+   transition: font-size 3s;
    
-   
+}
+
+.contact-info:hover{
+    font-size: 1.6rem;
+    color:rgb(7, 0, 0);
 }
 
 
