--- a/src/styling/contact.css
+++ b/src/styling/contact.css
@@ -29,24 +29,46 @@ justify-content: center ;
 }
 
 .contact-info{
+   
     margin-top: 5.7rem;
-    color: rgb(250, 249, 249);
+    color: rgb(241, 241, 247);
     font-weight: 700;
-    font-size: 1.2rem;
-    width: 30%;
+    font-size: 1.7rem;
+    width: 50%;
     margin-right: auto;
     margin-left: auto;
    text-align:center;
    box-shadow: 0px 0px 7px -1px #000000;
-   transition: color 2s;
-   transition: font-size 3s;
-   
+   margin-bottom: 19.5rem;
+   transition: color 6s;
+   transition: font-size 10s;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .contact-info:hover{
-    font-size: 1.6rem;
-    color:rgb(7, 0, 0);
+    font-size:2rem;
+    color: rgb(11, 5, 95);
 }
+
+
+
+.icon-contacts{
+    margin-left: auto;
+    margin-right: 1rem;
+    color: rgb(11, 5, 95);
+    animation: mymove 2s ease;
+    animation-iteration-count: 2;
+    transition: color 1s;
+}
+
+.icon-contacts:hover{
+    color: rgb(245, 245, 245);
+}
+
+@keyframes mymove {
+    from {padding-left: 1200px;}
+    to {margin-top: 0px;}
+  }
 
 
 
